style: fix nav headers collapsing

--- a/src/css/nav-style.css
+++ b/src/css/nav-style.css
@@ -1,10 +1,11 @@
 #app > nav {
-    background-image: url("../image/blue-mountain.jpg");
-    background-size: cover;
-    min-height: 200px;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     width: 100%;
+    min-height: 200px;
+    background-image: url("../image/blue-mountain.jpg");
+    background-size: cover;
 }
 
 #leftHeader {
